--- a/Day 2/HOMEWORKS/part 3-1.html
+++ b/Day 2/HOMEWORKS/part 3-1.html
@@ -9,6 +9,7 @@
 <body>
     <style>
         .img-responsive{
+            
             width: 100%;
             height: auto;
             display: block;
@@ -23,9 +24,9 @@
         <p>Lưu ý : giải thưởng nhiếp ảnh gia Việt Nam chỉ dành cho công dân Việt Nam</p>
     <h2>Giải thưởng</h2>
     <ul>
-        <li><b>Winner:</b> Sony a7R + SEL2740Z, Trip & Exhibition in London, UK</li>
-        <li><b>2nd place:</b> Sony a7 + SEL35F28Z</li>
+        <li><b>Winner:</b> Sony a7R + SEL2740Z, Trip & Exhibition in London, UK</li> br <li><b>2nd place:</b> Sony a7 + SEL35F28Z</li>
         <li><b>3nd place:</b> Sony a6500 + SEL1670Z</li>
     </ul>
+    
 </body>
 </html>
