--- a/Day 2/HOMEWORKS/part 4.html
+++ b/Day 2/HOMEWORKS/part 4.html
@@ -9,7 +9,7 @@
 <body>
     <h1>NỘI DUNG</h1>
     <ul>
-        <li><a href="#">Trang chủ</a></li>
+        <li><a href="">Trang chủ</a></li>
         <li><a href="">Về chúng tôi</a></li>
         <li><a href="https://www.pdffiller.com/en/functionality/application-photo-text.htm?msclkid=36e1c6b575161a25b60ca2c4db932129&utm_source=bing&utm_medium=cpc&utm_campaign=Adapt%20-%20Block%20Out&utm_term=%2Bfile%20%2Bpdf%20%2Bdocument&utm_content=Application%20Photo%20Text">Tải xuống</a></li>
         <li><a href="https://accounts.google.com/signup/v2/webcreateaccount?flowName=GlifWebSignIn&flowEntry=SignUp">Liên hệ chúng tôi</a></li>
