--- a/Day 4/HOMEWORKS/homework3/index.html
+++ b/Day 4/HOMEWORKS/homework3/index.html
@@ -19,6 +19,7 @@
             <div class="product flex">
                 <div class="value">
                     <div class="price">
+                        <i class="fa-thin fa-heart"></i>
                         <img class="picture" src="https://tse1.mm.bing.net/th?id=OIP.13DonGJMEIUfoGX9JNw3zQHaHa&pid=Api&P=0&h=180" alt="">
                         <p>CATEGORY</p>
                         <h4>Black Grey headset</h4>
